--- a/index.ipynb
+++ b/index.ipynb
@@ -194,11 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name = 'Art Vandelay'\n",
     "name"
@@ -216,9 +225,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "emai"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
